# reactos

./: CMakeLists.txt
base/services/nfsd/: CMakeLists.txt
dll/apisets/: CMakeLists.txt  CMakeLists.txt.in  api-ms-win-appmodel-identity-l1-1-0.spec  api-ms-win-core-file-fromapp-l1-1-0.spec  api-ms-win-core-libraryloader-l1-1-0.spec  api-ms-win-core-libraryloader-l1-1-1.spec  api-ms-win-core-libraryloader-l1-2-0.spec  api-ms-win-core-libraryloader-l1-2-1.spec  api-ms-win-core-localization-l1-2-2.spec  api-ms-win-core-localregistry-l1-1-0.spec  api-ms-win-core-memory-l1-1-1.spec  api-ms-win-core-memory-l1-1-2.spec  api-ms-win-core-memory-l1-1-4.spec  api-ms-win-core-registry-l1-1-0.spec  api-ms-win-core-registry-l2-1-0.spec  api-ms-win-crt-heap-l1-1-0.spec  api-ms-win-crt-locale-l1-1-0.spec  api-ms-win-crt-runtime-l1-1-0.spec  api-ms-win-downlevel-advapi32-l1-1-0.spec
dll/appcompat/apphelp/: CMakeLists.txt
dll/ntdll/: CMakeLists.txt
dll/win32/: CMakeLists.txt
dll/win32/advapi32/: CMakeLists.txt  advapi32.spec
dll/win32/kernel32/: CMakeLists.txt  kernel32.spec
dll/win32/mpr/: mpr.spec
dll/win32/msvcrt/: CMakeLists.txt  msvcrt.spec
dll/win32/msvcrt20/: CMakeLists.txt  msvcrt20.c  msvcrt20.spec
dll/win32/msvcrt40/: CMakeLists.txt  msvcrt40.c  msvcrt40.spec
dll/win32/shlwapi/: CMakeLists.txt
dll/win32/wininet/: CMakeLists.txt
media/doc/: WINESYNC.txt
modules/rostests/kmtests/: CMakeLists.txt
modules/rostests/kmtests/watchdog/: CMakeLists.txt  watchdog_drv.c  watchdog_user.c  wddeferred.c  wddpc.c  wddpc.h  wdioctl.h  wdnormal.c
sdk/cmake/: gcc.cmake  msvc.cmake
sdk/include/psdk/: d3d9types.h  watchdog.h
sdk/lib/crt/: crt.cmake
win32ss/drivers/watchdog/: CMakeLists.txt  watchdog.c  watchdog.spec
(+12 files in other folders)
